# xrtransport

./: CMakeLists.txt  xrtransport.code-workspace
include/xrtransport/: asio_compat.h
include/xrtransport/client/: module_interface.h  module_signature.h
include/xrtransport/config/: config.h
include/xrtransport/server/: module_interface.h  module_signature.h  server_c_api.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  available_extensions.cpp  available_extensions.h  entry.cpp  module_loader.cpp  module_loader.h  runtime.cpp
src/client/gfxstream_asg/: AddressSpaceStream.cpp  CMakeLists.txt  GoldfishAddressSpaceStream.cpp  LICENSE  VirtioGpuAddressSpaceStream.cpp  goldfish_address_space.cpp
src/common/config/: CMakeLists.txt  config.cpp
src/common/serialization/: CMakeLists.txt
src/common/transport/: CMakeLists.txt
src/modules/: CMakeLists.txt  static_client_modules.cpp  static_client_modules.h  static_server_modules.cpp  static_server_modules.h
src/modules/gles/: design.md
src/modules/handle_exchange_linux/: CMakeLists.txt  client_handle_exchange_factory.h  client_handle_exchange_linux.cpp  server_handle_exchange_factory.h  server_handle_exchange_linux.cpp
src/modules/vulkan/client/: CMakeLists.txt  image_import.cpp  image_import.h  session_state.cpp  session_state.h  vulkan_client_module.cpp  vulkan_client_module_factory.h  vulkan_core.cpp
src/modules/vulkan/common/: vulkan_common.h  vulkan_loader.h
src/modules/vulkan/server/: CMakeLists.txt  vulkan_init.cpp  vulkan_init.h  vulkan_server_module.cpp  vulkan_server_module_factory.h
src/server/: CMakeLists.txt  main.cpp  module.h  module_loader.cpp  module_loader.h  server.cpp  server.h  server_c_api.cpp
test/: CMakeLists.txt
test/serialization/: CMakeLists.txt
test/transport/: CMakeLists.txt
